# rigortemplate-rust-leptos-tailwind-02

./: .gitignore  Cargo.toml  README.md  TODOS.md  index.html  input.css  output.css  package-lock.json  package.json  run.sh
docs/: architecture.md  getting-started.md  hooks.md  patterns.md  testing.md  ui-library.md
public/: output.css
scripts/: find-port.sh
src/: app.rs  lib.rs
src/components/: mod.rs
src/components/layout/: header.rs  main_layout.rs  sidebar.rs
src/components/shared/: mod.rs  stats_card.rs
src/components/views/: accordion_view.rs  analytics_view.rs  catalog_view.rs  dashboard_view.rs  hooks_catalog_view.rs  mod.rs  panel_view.rs  projects_view.rs  settings_view.rs
src/core/: api.rs  errors.rs  mod.rs  provider.rs  state.rs
src/hooks/: mod.rs
src/shared/: common.rs  form_input.rs  input.rs  mod.rs  multi_select_wasm_test.rs  storage.rs  theme.rs  tooltip.rs
src/shared/utils/: cn.rs  mod.rs
src/stdlib/: mod.rs  state.rs
src/stdlib/hooks/: common.rs  mod.rs  storage.rs  toasts.rs
src/stdlib/services/: api.rs  errors.rs  mod.rs  provider.rs
src/stdlib/ui/: accordion.rs  badge.rs  button.rs  card.rs  code_block.rs  data_table.rs  form_input.rs  mod.rs  multi_select.rs  panel.rs  progress.rs  registry.rs  stepper.rs  toast.rs
src/stdlib/utils/: mod.rs
src/ui/: mod.rs  registry.rs
src/ui/layout/: header.rs  main_layout.rs  mod.rs  sidebar.rs
src/ui/shared/: accordion.rs  badge.rs  button.rs  card.rs  code_block.rs  data_table.rs  demo_page.rs  form_input.rs  input.rs  mod.rs  modal.rs  multi_select.rs  (+7 more)
style/: output.css
(+24 files in other folders)
