[package]
name = "tailwind"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", default-features = false }
leptos_meta = { version = "0.8", default-features = false }
gloo-net = { version = "0.2", features = ["http"] }
log = "0.4"
cfg-if = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
reqwest = { version = "0.11", features = ["json"] }
validator = { version = "0.16", features = ["derive"] }
itertools = "0.12"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# dependencies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "Element", "HtmlElement", "Clipboard", "Navigator", "Event", "MediaQueryList", "MediaQueryListEvent", "IntersectionObserver", "IntersectionObserverEntry", "ResizeObserver", "ResizeObserverEntry", "Node", "EventTarget", "DomRect"] }
console_log = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
gloo-storage = "0.4.0"
thiserror = "2.0.18"
js-sys = "0.3.99"
regex = "1.12.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["csr"]
csr = [
  "leptos/csr",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "dep:console_log",
  "dep:console_error_panic_hook",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
